# sageai-examples

./: .flake8  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/: ci.yaml
.github/workflows/: ci.yaml
llm_evaluation_demo/: Makefile  README.md  blog_toy_dataset.csv  demo_utils.py  prompt_evaluation_demo.ipynb  pyproject.toml
