[tool.poetry]
name = "sageai-examples"
version = "0.1.0"
description = ""
authors = ["frazierprime <josh.frazier@sage.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.3"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
flake8 = "^6.1.0"
flake8-builtins = "^2.1.0"
flake8-isort = "^6.0.0"
flake8-tidy-imports = "^4.10.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pylint = "^3.2.7"
types-PyYAML = "^6.0.0"
types-tqdm = "^4.66.0.4"
types-requests = "^2.31.0.10"

[tool.black]
target-version = ['py311']
line-length = 100
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \test-results
    | _build
    | buck-out
    | build
    | dist
    | service_contract
    | docs
    | pgdata
  )/
)
'''

[tool.isort]
line_length=100
multi_line_output=3
include_trailing_comma="True"
ensure_newline_before_comments = true
force_grid_wrap = 0
known_local_folder = "tests"
lines_after_imports = 2
profile = "black"
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"